--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
         <div class="header">
             <div class="header-logo"></div>
             <div class="header-navigation">
-                <div class="header-menu"></div>
+                <div class="header-menu">
+                    <div class="header-link">Features</div>
+                    <div class="header-link">Premium</div>
+                    <div class="header-link">Pricing</div>
+                    <div class="header-link">About</div>
+                </div>
                 <div class="separator"></div>
                 <div class="header-buttons">
-                    <div class="header-button"></div>
-                    <div class="header-button header-button-contur"></div>
+                    <div class="header-button">Sign in</div>
+                    <div class="header-button header-button-contur">Get Started</div>
                 </div>
             </div>
         </div>
         <div class="intro-block">
-            <div class="intro-label"></div>
-            <div class="intro-about"></div>
-            <button class="common"></button>
+            <div class="intro-label">Propel your business.</div>
+            <div class="intro-about">Propel comes with everything you need to get your business rolling.</div>
+            <button class="common">Get Started</button>
         </div>
     </div>
 </div>
@@ -37,22 +42,80 @@
         <div class="qualities">
             <div class="quality">
                 <img src="" alt="" class="quality-img" />
-                <div class="quality-label">
-                    <div class="quality-about"></div>
-                </div>
-            </div>
-            <div class="quality">
-                <img src="" alt="" class="quality-img"/>
-                <div class="quality-label">
-                    <div class="quality-about"></div>
-                </div>
+                <div class="quality-label">Pro ad constituto</div>
+                <div class="quality-about">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
             </div>
             <div class="quality">
                 <img src="" alt="" class="quality-img" />
-                <div class="quality-label">
-                    <div class="quality-about"></div>
-                </div>
+                <div class="quality-label">Eam commodo</div>
+                <div class="quality-about">Fuisset intellegat delicatissimi ex mea. Cu probo integre nec.</div>
             </div>
+            <div class="quality">
+                <img src="" alt="" class="quality-img" />
+                <div class="quality-label">Reformidans eis</div>
+                <div class="quality-about">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="central-picture">
+
+</div>
+
+<div class="Illud-decore">
+    <div class="wrapper">
+        <p class="Illud-decore-text"><b>Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
+        <div class="link-about">More About Us</div>
+    </div>
+</div>
+
+<div class="food-menu">
+    <div class="wrapper">
+        <div class="card-menu">
+            <img src="" alt="" class="menu-img" />
+            <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> Ad vix dicta iudico singulis, ius ex mollis veritus.</p>
+            <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
+        </div>
+        <div class="card-menu">
+            <img src="" alt="" class="menu-img" />
+            <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
+            <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
+        </div>
+        <p class="wanna-know">Wanna know more about the Premium deal?</p>
+        <p class="see">See the full range of Premium</p>
+    </div>
+</div>
+
+<div class="party">
+    <div class="wrapper">
+        <p class="party-title">Party On</p>
+        <div class="party-line"></div>
+        <p class="party-subtitle"><b>Quas suscipit ad mea.</b> Pri cu dico labores officiis odio principes complectitur ad sea.</p>
+        <button class="party-button">Get Started</button>
+    </div>
+</div>
+
+<div class="footer">
+    <div class="wrapper">
+        <div class="footer-block-logo">
+            <div class="footer-logo"></div>
+            <div class="footer-signature">© 2018 Spoon Inc, All rights reserved.</div>
+        </div>
+        <div class="footer-menu">
+            <div class="footer-link">Features</div>
+            <div class="footer-link">Premium</div>
+            <div class="footer-link">Pricing</div>
+            <div class="footer-link">About</div>
+            <div class="footer-link">Blog</div>
+            <div class="footer-link">Contact</div>
+            <div class="footer-link">Image License Info</div>
+            <div class="footer-link">Powered by Webflow</div>
+        </div>
+        <div class="footer-icons">
+            <div class="footer-icon"></div>
+            <div class="footer-icon"></div>
+            <div class="footer-icon"></div>
         </div>
     </div>
 </div>
