--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="central-picture">
-
+    <img src="" alt="">
 </div>
 
 <div class="Illud-decore">
@@ -72,26 +72,33 @@
 
 <div class="food-menu">
     <div class="wrapper">
-        <div class="card-menu">
+        <div class="menu">
             <img src="" alt="" class="menu-img" />
-            <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> Ad vix dicta iudico singulis, ius ex mollis veritus.</p>
-            <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
+            <div class="menu-block">
+                <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> Ad vix dicta iudico singulis, ius ex mollis veritus.</p>
+                <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
+            </div>
         </div>
-        <div class="card-menu">
+        <div class="menu">
+            <div class="menu-block">
+                <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
+                <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
+            </div>
             <img src="" alt="" class="menu-img" />
-            <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
-            <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
         </div>
-        <p class="wanna-know">Wanna know more about the Premium deal?</p>
-        <p class="see">See the full range of Premium</p>
+        <div class="menu-about">
+            <p class="menu-about-label">Wanna know more about the Premium deal?</p>
+            <p class="menu-about-sub-label">See the full range of Premium</p>
+        </div>
     </div>
 </div>
 
 <div class="party">
-    <div class="wrapper">
-        <p class="party-title">Party On</p>
-        <div class="party-line"></div>
-        <p class="party-subtitle"><b>Quas suscipit ad mea.</b> Pri cu dico labores officiis odio principes complectitur ad sea.</p>
+    <div class="wrapper party-block">
+        <div class="party-content">
+            <p class="party-title">Party On</p>
+            <p class="party-subtitle"><b>Quas suscipit ad mea.</b> Pri cu dico labores officiis odio principes complectitur ad sea.</p>
+        </div>
         <button class="party-button">Get Started</button>
     </div>
 </div>
@@ -99,8 +106,8 @@
 <div class="footer">
     <div class="wrapper">
         <div class="footer-block-logo">
-            <div class="footer-logo"></div>
-            <div class="footer-signature">© 2018 Spoon Inc, All rights reserved.</div>
+            <img src="" alt="" />
+            <div class="footer-copyright">© 2018 Spoon Inc, All rights reserved.</div>
         </div>
         <div class="footer-menu">
             <div class="footer-link">Features</div>
