--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
+    <link href="static/styles/normalize.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
@@ -41,7 +42,7 @@
         </p>
         <div class="qualities">
             <div class="quality">
-                <img src="" alt="" class="quality-img" />
+                <img src="/static/images/fruits.png" alt="" class="quality-img" />
                 <div class="quality-label">Pro ad constituto</div>
                 <div class="quality-about">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
             </div>
