--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="intro">
     <div class="wrapper">
         <div class="header">
-            <div class="header-logo"></div>
+            <div class="header-logo"><img src="/static/images/logo.svg" alt="logo"></div>
             <div class="header-navigation">
                 <div class="header-menu">
                     <div class="header-link">Features</div>
@@ -42,17 +42,17 @@
         </p>
         <div class="qualities">
             <div class="quality">
-                <img src="/static/images/fruits.png" alt="" class="quality-img" />
+                <img src="/static/images/coffee.svg" alt="" class="coffee-img" />
                 <div class="quality-label">Pro ad constituto</div>
                 <div class="quality-about">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
             </div>
             <div class="quality">
-                <img src="" alt="" class="quality-img" />
+                <img src="/static/images/hot-dog.svg" alt="hot-dog" class="quality-img" />
                 <div class="quality-label">Eam commodo</div>
                 <div class="quality-about">Fuisset intellegat delicatissimi ex mea. Cu probo integre nec.</div>
             </div>
             <div class="quality">
-                <img src="" alt="" class="quality-img" />
+                <img src="/static/images/calendar.svg" alt="calendar" class="quality-img" />
                 <div class="quality-label">Reformidans eis</div>
                 <div class="quality-about">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</div>
             </div>
@@ -61,7 +61,7 @@
 </div>
 
 <div class="central-picture">
-    <img src="" alt="">
+    <img src="/static/images/center.png" alt="center-img">
 </div>
 
 <div class="Illud-decore">
@@ -74,7 +74,7 @@
 <div class="food-menu">
     <div class="wrapper">
         <div class="menu">
-            <img src="" alt="" class="menu-img" />
+            <img src="/static/images/fruits.png" alt="fruits" class="menu-img" />
             <div class="menu-block">
                 <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> Ad vix dicta iudico singulis, ius ex mollis veritus.</p>
                 <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
@@ -85,7 +85,7 @@
                 <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
                 <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
             </div>
-            <img src="" alt="" class="menu-img" />
+            <img src="/static/images/fruits-kasha.png" alt="fruits-kasha" class="menu-img" />
         </div>
         <div class="menu-about">
             <p class="menu-about-label">Wanna know more about the Premium deal?</p>
@@ -107,7 +107,7 @@
 <div class="footer">
     <div class="wrapper">
         <div class="footer-block-logo">
-            <img src="" alt="" />
+            <img src="/static/images/logo.svg" alt="logo" />
             <div class="footer-copyright">© 2018 Spoon Inc, All rights reserved.</div>
         </div>
         <div class="footer-menu">
@@ -121,9 +121,9 @@
             <div class="footer-link">Powered by Webflow</div>
         </div>
         <div class="footer-icons">
-            <div class="footer-icon"></div>
-            <div class="footer-icon"></div>
-            <div class="footer-icon"></div>
+            <div class="footer-icon"><img src="/static/images/facebook-icon.svg" alt="facebook" /></div>
+            <div class="footer-icon"><img src="/static/images/twitter-icon.svg" alt="twitter" /></div>
+            <div class="footer-icon"><img src="/static/images/instagram-icon.svg" alt="instagram" /></div>
         </div>
     </div>
 </div>
