styles intro block

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <link href="static/styles/normalize.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="static/styles" rel="stylesheet" />
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -21,7 +21,7 @@
                     <div class="header-link">Pricing</div>
                     <div class="header-link">About</div>
                 </div>
-                <div class="separator"></div>
+                <div class="separator">&bull;</div>
                 <div class="header-buttons">
                     <div class="header-button">Sign in</div>
                     <div class="header-button header-button-contur">Get Started</div>
