styles all block

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 </div>
+
 <div class="promoting">
     <div class="wrapper">
         <p class="promoting-about">
@@ -42,7 +43,7 @@
         </p>
         <div class="qualities">
             <div class="quality">
-                <img src="/static/images/coffee.svg" alt="" class="coffee-img" />
+                <img src="/static/images/coffee.svg" alt="coffee" class="quality-img" />
                 <div class="quality-label">Pro ad constituto</div>
                 <div class="quality-about">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
             </div>
@@ -60,13 +61,13 @@
     </div>
 </div>
 
-<div class="central-picture">
-    <img src="/static/images/center.png" alt="center-img">
+<div class="central">
+    <img src="/static/images/center.png" alt="center-img" class="central-picture">
 </div>
 
-<div class="Illud-decore">
+<div class="illud-decore">
     <div class="wrapper">
-        <p class="Illud-decore-text"><b>Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
+        <p class="illud-decore-text"><b>Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
         <div class="link-about">More About Us</div>
     </div>
 </div>
@@ -80,10 +81,10 @@
                 <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
             </div>
         </div>
-        <div class="menu">
+        <div class="menu menu-second">
             <div class="menu-block">
-                <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
-                <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
+                <p class="menu-title menu-title-second"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
+                <p class="menu-subtitle menu-subtitle-second">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
             </div>
             <img src="/static/images/fruits-kasha.png" alt="fruits-kasha" class="menu-img" />
         </div>
@@ -100,30 +101,38 @@
             <p class="party-title">Party On</p>
             <p class="party-subtitle"><b>Quas suscipit ad mea.</b> Pri cu dico labores officiis odio principes complectitur ad sea.</p>
         </div>
-        <button class="party-button">Get Started</button>
+        <div class="party-button">
+            <button class="common">Get Started</button>
+        </div>
     </div>
 </div>
 
 <div class="footer">
-    <div class="wrapper">
+    <div class="wrapper wrapper-footer">
         <div class="footer-block-logo">
             <img src="/static/images/logo.svg" alt="logo" />
             <div class="footer-copyright">© 2018 Spoon Inc, All rights reserved.</div>
         </div>
         <div class="footer-menu">
-            <div class="footer-link">Features</div>
-            <div class="footer-link">Premium</div>
-            <div class="footer-link">Pricing</div>
-            <div class="footer-link">About</div>
-            <div class="footer-link">Blog</div>
-            <div class="footer-link">Contact</div>
-            <div class="footer-link">Image License Info</div>
-            <div class="footer-link">Powered by Webflow</div>
-        </div>
-        <div class="footer-icons">
-            <div class="footer-icon"><img src="/static/images/facebook-icon.svg" alt="facebook" /></div>
-            <div class="footer-icon"><img src="/static/images/twitter-icon.svg" alt="twitter" /></div>
-            <div class="footer-icon"><img src="/static/images/instagram-icon.svg" alt="instagram" /></div>
+            <div class="footer-menu-first">
+                <div class="footer-link">Features</div>
+                <div class="footer-link">Premium</div>
+                <div class="footer-link">Pricing</div>
+            </div>
+            <div class="footer-menu-second">
+                <div class="footer-link">About</div>
+                <div class="footer-link">Blog</div>
+                <div class="footer-link">Contact</div>
+            </div>
+            <div class="footer-menu-info">
+                <div class="footer-link">Image License Info</div>
+                <div class="footer-link">Powered by Webflow</div>
+            </div>
+            <div class="footer-icons">
+                <div class="footer-icon"><img src="/static/images/facebook-icon.svg" alt="facebook" /></div>
+                <div class="footer-icon"><img src="/static/images/twitter-icon.svg" alt="twitter" /></div>
+                <div class="footer-icon"><img src="/static/images/instagram-icon.svg" alt="instagram" /></div>
+            </div>
         </div>
     </div>
 </div>
