--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="promoting">
     <div class="wrapper">
         <p class="promoting-about">
-            <b>Promoting your business and services with Propel</b>: A responsive, multi-page business template with everything you need propel your business.
+            <b>Promoting your business and services with Propel</b>: <span class="gray-color">A responsive, multi-page business template with everything you need propel your business.</span>
         </p>
         <div class="qualities">
             <div class="quality">
@@ -67,7 +67,7 @@
 
 <div class="illud-decore">
     <div class="wrapper">
-        <p class="illud-decore-text"><b>Illud decore voluptaria has at.</b> Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</p>
+        <p class="illud-decore-text"><b>Illud decore voluptaria has at.</b> <span class="gray-color">  Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</span></p>
         <div class="link-about">More About Us</div>
     </div>
 </div>
@@ -77,14 +77,14 @@
         <div class="menu">
             <img src="/static/images/fruits.png" alt="fruits" class="menu-img" />
             <div class="menu-block">
-                <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> Ad vix dicta iudico singulis, ius ex mollis veritus.</p>
+                <p class="menu-title"><b>Ex tempor euismod sapientem ouis lexor pro.</b> <span class="gray-color">Ad vix dicta iudico singulis, ius ex mollis veritus.</span></p>
                 <p class="menu-subtitle">Possit tritani consectetuer eu his, nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.</p>
             </div>
         </div>
         <div class="menu menu-second">
-            <div class="menu-block">
-                <p class="menu-title menu-title-second"><b>Te elit antiopam vix zril recusabo ut pri.</b> Quas suscipit ad mea verear vivendo tincidunt.</p>
-                <p class="menu-subtitle menu-subtitle-second">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
+            <div class="menu-block menu-block-second">
+                <p class="menu-title"><b>Te elit antiopam vix zril recusabo ut pri.</b><span class="gray-color"> Quas suscipit ad mea verear vivendo tincidunt.</span></p>
+                <p class="menu-subtitle">Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea verear vivendo tincidunt.</p>
             </div>
             <img src="/static/images/fruits-kasha.png" alt="fruits-kasha" class="menu-img" />
         </div>
